--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           github_user_name: huxson-gh
           outputs: |
-            dist/github-snake.svg?color_snake=#40a2ff&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-            dist/github-snake-dark.svg?color_snake=#40a2ff&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+            dist/github-snake.svg?color_snake=#ff355e&color_dots=#ebedf0,#9be9a8,#40c463,#30a14e,#216e39
+            dist/github-snake-dark.svg?color_snake=#ff355e&color_dots=#161b22,#0e4429,#006d32,#26a641,#39d353
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v4
